--- a/gb/19/8/15/n11456109.md
+++ b/gb/19/8/15/n11456109.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dwfgyx2217/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/dwfgyx2217/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dwfgyx2217/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dwfgyx2217/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共发动信息战 挑动愤青嚷嚷“出兵香港”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/08/8bd0021fe8e3b0c8123cad59e8c12c14.jpg" />
 <h6>8月11日晚，香港尖沙咀，一名女性被警方的布袋弹击中眼睛，或造成视力永久损伤。(ANTHONY WALLACE/AFP/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2019年08月16日讯】港人的<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md">反送中</a>、争取自由民主的运动正在如火如荼地进行之际，<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md">中共</a>一方面封锁外面的真实消息，另一方面不断发布虚<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%81%87%E6%B6%88%E6%81%AF.md">假消息</a>及煽动性言论等，令一些上当受骗的大陆“愤青”嚷嚷要出兵残忍<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E9%95%87%E5%8E%8B%E6%B8%AF%E4%BA%BA.md">镇压港人</a>。</p>
-<p>《纽约时报》中文网8月14日报导，在过去几十年，<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md">中共</a>建立起了一个比其它任何国家都严密的网络控制系统。中共屏蔽了许多海外网站。中国互联网公司内部审查员们将任何中共政府不可接受的内容删除。警方逮捕一些在聊天群里发表“不当”言论或在网上分享敏感内容的人。</p>
+<p>【大纪元2019年08月16日讯】港人的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md#1">反送中</a>、争取自由民主的运动正在如火如荼地进行之际，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>一方面封锁外面的真实消息，另一方面不断发布虚<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%81%87%E6%B6%88%E6%81%AF.md#1">假消息</a>及煽动性言论等，令一些上当受骗的大陆“愤青”嚷嚷要出兵残忍<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E9%95%87%E5%8E%8B%E6%B8%AF%E4%BA%BA.md#1">镇压港人</a>。</p>
+<p>《纽约时报》中文网8月14日报导，在过去几十年，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>建立起了一个比其它任何国家都严密的网络控制系统。中共屏蔽了许多海外网站。中国互联网公司内部审查员们将任何中共政府不可接受的内容删除。警方逮捕一些在聊天群里发表“不当”言论或在网上分享敏感内容的人。</p>
 <p>而中共开发的所谓“防火墙”对媒体内容采取强有力的控制。同时，中共官媒报导大量导向性陈述或编造假新闻。</p>
-<p>这篇《中共如何对香港抗议者展开<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E4%BF%A1%E6%81%AF%E6%88%98.md">信息战</a>》的文章说，现在，中共正在把这种控制当作信息战的武器，用于对付持续数月的香港<a href="https://github.com/dwfgyx2217/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md">反送中</a>运动。</p>
+<p>这篇《中共如何对香港抗议者展开<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%BF%A1%E6%81%AF%E6%88%98.md#1">信息战</a>》的文章说，现在，中共正在把这种控制当作信息战的武器，用于对付持续数月的香港<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%8F%8D%E9%80%81%E4%B8%AD.md#1">反送中</a>运动。</p>
 <p>文章举例了中共官媒编造虚构多个假新闻的例子。如否认那名香港女子眼球被警察打爆，中共央视日前编造说，不是警方施放布袋弹所致，而是另一名抗议者所为；央视还做了跟进报导，发布了一张据称是该女子在香港人行道上派钱的照片，暗示抗议者不过是用钱雇来的“挑衅者”。</p>
 <p>再如中共官媒周一（8月12日）还发了一段视频，把一名示威者拿着类似于彩弹游戏的Airsoft的玩具，说成是美军配备的M320榴弹发射器。这条假新闻燃起了大陆网民的怒火，其中一个网民评论道：“这和恐怖分子有什么两样？”“我们还要忍耐多久？”</p>
 <p>近几天，中共官方及媒体又开始煽动民族主义和反西方情绪，并将港人的示威活动说成是“暴行”、“恐怖主义”的前奏等。</p>
@@ -24,40 +24,45 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/19/8/15/n11456109.htm">中共发动信息战 挑动愤青嚷嚷“出兵香港”</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/8/15/n11455644.htm">【新闻看点】中共假新闻煽动 陆民误解香港人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/8/15/n11454062.htm">王友群：香港反送中必将激励全民反中共</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/8/15/n11453884.htm">香港反送中 伪装的示威者都做了啥？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/8/15/n11454033.htm">香港反送中延烧 柯文哲劝北京勿让六四重演</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/8/12/n11449050.htm">“猪队友”&汽油弹 央视编造谎言被识破</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/7/18/n11393981.htm">港人连爆抗议活动 港媒：北京吃惊未获情报</a></li>
-> <li><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/19/8/15/n11455533.md">中共武警集结深圳 台湾：反对军事镇压港人</a></li>
-> <li><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/19/8/14/n11453371.md">中共深圳集结500辆军车 口岸防港人“快闪”</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11887392.htm">美退役上将：中共对台动武可能催生东亚北约</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11886970.htm">【一线采访】武汉管控续升级 百姓生活艰难</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11888161.htm">美情报界查新冠疫情 传中共高层订逃离计划</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11887347.htm">中共推迟两会 四名高官或面临人事调整</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879930.htm">专家：中共已是烂摊子 全球将迎来新的中国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885738.htm">中共官媒称10万鸭军抗4千亿蝗虫 网民吐槽</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884463.htm">北京多家医院爆发新冠肺炎群聚感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886484.htm">【新闻看点】一线医生揭疫情内幕 习称拐点未到</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/22/n11888306.htm">【热点互动】党媒成外国使团 特殊任务难履行</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886081.htm">【直播回放】2.21新肺炎追踪：监狱大爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11884340.htm">《花木兰》上映在即 美国影协评级PG-13</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882140.htm">南非狒狒抱幼狮上树 如动画《狮子王》情节</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882976.htm">因长辈的话 黄子佼登记结婚临喊卡</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/15/n11455644.md#1">【新闻看点】中共假新闻煽动 陆民误解香港人</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/15/n11454062.md#1">王友群：香港反送中必将激励全民反中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/15/n11453884.md#1">香港反送中 伪装的示威者都做了啥？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/15/n11454033.md#1">香港反送中延烧 柯文哲劝北京勿让六四重演</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/12/n11449050.md#1">“猪队友”&汽油弹 央视编造谎言被识破</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/7/18/n11393981.md#1">港人连爆抗议活动 港媒：北京吃惊未获情报</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dwfgyx2217/djy/blob/master/gb/19/8/15/n11456109.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dwfgyx2217/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dwfgyx2217/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dwfgyx2217/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/15/n11455533.md#1">中共武警集结深圳 台湾：反对军事镇压港人</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/8/14/n11453371.md#1">中共深圳集结500辆军车 口岸防港人“快闪”</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/9/n10377672.md#1" target="_blank">林辉：民国三位大师眼中的共产主义很可怕</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941216.md#1">【一线采访视频版】封城近50天 武汉人生活困苦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/8/15/n11456109.htm">中共发动信息战 挑动愤青嚷嚷“出兵香港”</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/8/15/n11456109.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
